# YAVSG

./: .gitignore  .gitmodules  CMakeLists.txt
CMakeModules/: FindSDL2.cmake  PreprocessSourceFile.cmake  YAVSGFindUtilities.cmake
config/: Info.plist
include/engine/: 4up_postprocess_step.hpp  basic_postprocess_step.hpp  dof_postprocess_step.hpp  frame.hpp  gl_tut.hpp  multi_postprocess_step.hpp  obj.hpp  obj_render_step.hpp  scene.hpp  scene_render_step.hpp
include/events/: event_listener.hpp
include/gl/: _gl_base.hpp  attribute_buffer.hpp  buffer.hpp  buffer_types.hpp  error.hpp  framebuffer.hpp  shader.hpp  shader_program.hpp  texture.hpp  texture_utilities.hpp
include/math/: basic_transforms.hpp  common_transforms.hpp  matrix.hpp  quaternion.hpp  scalar_operations.hpp  transforms.hpp  trigonometry.hpp  vector.hpp
include/rendering/: 4up_postprocess_render_step.hpp  4up_postprocess_step.hpp  basic_postprocess_step.hpp  camera.hpp  dof_postprocess_step.hpp  gl_tut.hpp  gl_tut_postprocess_render_step.hpp  gl_tut_scene_render_step.hpp  material.hpp  obj_render_step.hpp  render_object_manager.hpp  render_step.hpp  scene_render_step.hpp  shader_variable_names.hpp  texture_reference.hpp
include/sdl/: _sdl_base.hpp  sdl_utils.hpp
include/tasking/: task.hpp  tasking.hpp  utility_tasks.hpp
include/windowsys/: window.hpp
libraries/: CMakeLists.txt
libraries/events/: CMakeLists.txt
libraries/events/include/yavsg/events/: event_listener.hpp
libraries/events/src/: event_listener.cpp
libraries/gl/: CMakeLists.txt
libraries/gl/include/yavsg/gl/: attribute_buffer.hpp  error.hpp  framebuffer.hpp  shader.hpp  shader_program.hpp  texture.hpp  texture_utilities.hpp
libraries/gl/src/: error.cpp  framebuffer.cpp  shader.cpp  texture_utilities.cpp
libraries/gl_wrap/: CMakeLists.txt
libraries/gl_wrap/config/: gl_wrap.cpp.in  gl_wrap.hpp.in
libraries/gl_wrap/include/yavsg/: gl_wrap.hpp
libraries/gl_wrap/include/yavsg/gl/: error.hpp
libraries/gl_wrap/src/: error.cpp
libraries/logging/: CMakeLists.txt
libraries/logging/include/yavsg/: asserts.hpp  logging.hpp
libraries/logging/src/: asserts.cpp  logging.cpp
libraries/math/: CMakeLists.txt
libraries/math/include/yavsg/math/: basic_transforms.hpp  common_transforms.hpp  matrix.hpp  quaternion.hpp  scalar_operations.hpp  trigonometry.hpp  vector.hpp
libraries/rendering/: CMakeLists.txt
libraries/rendering/include/yavsg/rendering/: 4up_postprocess_step.hpp  basic_postprocess_step.hpp  camera.hpp  dof_postprocess_step.hpp  material.hpp  multi_postprocess_step.hpp  obj.hpp  obj_render_step.hpp  render_object_manager.hpp  render_step.hpp  scene.hpp  shader_utils.hpp  shader_variable_names.hpp  texture_reference.hpp
libraries/rendering/src/: 4up_postprocess_step.cpp  basic_postprocess_step.cpp  camera.cpp  dof_postprocess_step.cpp  multi_postprocess_step.cpp  obj.cpp  obj_render_step.cpp  scene.cpp  shader_utils.cpp  shader_variable_names.cpp
libraries/sdl/: CMakeLists.txt
libraries/sdl/include/yavsg/sdl/: sdl.hpp  utils.hpp
libraries/sdl/src/: utils.cpp
libraries/tasking/: CMakeLists.txt
libraries/tasking/include/yavsg/tasking/: task.hpp  tasking.hpp  utility_tasks.hpp
libraries/tasking/src/: task.cpp  tasking.cpp
libraries/units/: CMakeLists.txt
libraries/units/include/yavsg/units/: angular.hpp  constants.hpp  dpi.hpp  prefixes.hpp  unit.hpp
libraries/windowsys/: CMakeLists.txt
libraries/windowsys/include/yavsg/windowsys/: frame.hpp  window.hpp
libraries/windowsys/src/: frame.cpp  window.cpp
programs/: CMakeLists.txt
programs/engine/: CMakeLists.txt
programs/engine/src/: main.cpp
shaders/: obj_scene.frag  obj_scene.vert  postprocess.vert  scene.frag  scene.vert
shaders/postprocess/: buffer_analysis.frag  greyscale.frag  sobel.frag
src/: Info.plist  main.cpp  math.hpp  real.cpp  real.hpp  real.v1.cpp  vector.hpp
src/engine/: 4up_postprocess_step.cpp  basic_postprocess_step.cpp  dof_postprocess_step.cpp  frame.cpp  main.cpp  multi_postprocess_step.cpp  obj.cpp  obj_render_step.cpp  scene.cpp  scene_render_step.cpp
src/events/: event_listener.cpp
src/gl/: error.cpp  fragment_shader.frag  framebuffer.cpp  gl_utils.cpp  gl_utils.hpp  main.cpp  postprocess.frag  render_steps.cpp  render_steps.hpp  sdl_utils.cpp  sdl_utils.hpp  shader.cpp  texture.cpp  texture_utilities.cpp
src/rendering/: 4up_postprocess_render_step.cpp  4up_postprocess_step.cpp  basic_postprocess_step.cpp  camera.cpp  dof_postprocess_step.cpp  gl_tut_postprocess_render_step.cpp  gl_tut_scene_render_step.cpp  obj_render_step.cpp  scene_render_step.cpp  shader_variable_names.cpp
src/sdl/: sdl_utils.cpp
src/shaders/: obj_scene.frag  obj_scene.vert  postprocess.frag  scene.frag  scene.vert
src/shaders/postprocess/: box_blur.frag  buffer_analysis.frag  circular_gradient.frag  depth.frag  dof.frag  greyscale.frag  linear_to_sRGB.frag  sobel.frag
src/tasking/: task.cpp  tasking.cpp
src/units/: main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  scalars.hpp  string_conversions.hpp  type_base.hpp  unit.hpp
src/windowsys/: window.cpp
