ADD_LIBRARY( gl_wrap INTERFACE )

SET( HEADERS
    "include/yavsg/gl_wrap.hpp"
)
SET( SOURCES
)
TARGET_SOURCES( gl_wrap PRIVATE ${HEADERS} ${SOURCES} )
SOURCE_GROUP( "C++ Headers" FILES ${HEADERS} )
SOURCE_GROUP( "C++ Sources" FILES ${SOURCES} )

TARGET_INCLUDE_DIRECTORIES( gl_wrap
    INTERFACE
        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>"
        "$<INSTALL_INTERFACE:include/>"
)

TARGET_LINK_LIBRARIES( gl_wrap
    INTERFACE
        GLEW::GLEW
        OpenGL::GL
)
